# aero-browser

./: .gitignore  CLAUDE.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
docs/: ARCHITECTURE.md  CONFIG.md  MULTIWEBVIEW.md  PROJECT.md  README.md  STYLE.md  TASKS.md  TESTING.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bookmarks.rs  find.rs  history.rs  mod.rs  navigation.rs  settings.rs  tabs.rs
src-tauri/src/state/: chrome_height.rs  mod.rs  tab_state.rs
src-tauri/src/storage/: bookmarks.rs  database.rs  history.rs  mod.rs  settings.rs
src/lib/actions/: clickOutside.js
src/lib/components/: AddressBar.svelte  BookmarkBar.svelte  ContextMenu.svelte  FindBar.svelte  NavigationControls.svelte  StatusBar.svelte  Tab.svelte  TabBar.svelte  WindowControls.svelte
src/lib/stores/: bookmarks.js  history.js  settings.js  tabs.js
src/lib/styles/: app.css  themes.css
src/lib/utils/: constants.js  url.js  url.test.js
src/routes/: +layout.svelte  +page.svelte
src/routes/bookmarks/: +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
